--- a/modules/specialized-guides/pages/public-cloud-guide/payg-support.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg-support.adoc
@@ -53,9 +53,9 @@ To open a new cloud support case proceed to: https://scc.suse.com/cloudsupport
 
 .Procedure: Opening a new support case
 
-. Generate and upload your instances supportconfig file.
+. Generate and upload your instances **supportconfig** file.
 
-. Upload your supportconfig file maximum of **5 GB** at link:https://scc.suse.com/cloudsupport[Cloud Support]
+. Upload your **supportconfig** file maximum of **5 GB** at link:https://scc.suse.com/cloudsupport[Cloud Support]
 
 . Accept the **terms and conditions**, **Terms of Use and Import/Export Policy** and the **privacy policy**.
 
