--- a/modules/specialized-guides/pages/public-cloud-guide/payg-support.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg-support.adoc
@@ -61,4 +61,4 @@ To open a new cloud support case proceed to: https://scc.suse.com/cloudsupport
 
 . Select the btn:Upload and Validate[] button.
 
-. Once validated complete the personal information and organization information documents and open the support case.
+. Once validated complete the __personal information__ and __organization information__ documents and open the **support case**.
