Fixed references to DB and SLES.

--- a/modules/installation-and-upgrade/pages/db-migration-xy.adoc
+++ b/modules/installation-and-upgrade/pages/db-migration-xy.adoc
@@ -6,8 +6,8 @@ If you are already using PostgreSQL 14, you do not need to perform this migrati
 
 If you want to upgrade to the latest {productname} version, you must be using PostgreSQL version 13 or 14, depending on the underlying operating system:
 
+* If you are running {sles} 15 SP3, use PostgreSQL 13.
 * If you are running {sles} 15 SP4, use PostgreSQL 14.
-* If you are running {opensuse} Leap 15.4, use PostgreSQL 14.
 
 
 [[db-migration-xy-prepare]]
