--- a/modules/specialized-guides/pages/public-cloud-guide/payg-support.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg-support.adoc
@@ -63,6 +63,8 @@ To open a new cloud support case proceed to: https://scc.suse.com/cloudsupport
 
 . Once validated complete the __personal information__ and __organization information__ documents and open the **support case**.
 
+
+
 == Billing Services and Troubleshooting
 
 billing-data-service::
@@ -73,7 +75,7 @@ The service is reachable at:
 - http://localhost:18888/metering
 
 This service is maintained by the {productname} team
-The service only logs in the **systemd journal**.
+This service only logs to **systemd journal**.
 
 **Billing services** must be running or the spacewalk will refuse to start.
 
