--- a/modules/specialized-guides/pages/public-cloud-guide/payg-support.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg-support.adoc
@@ -77,7 +77,7 @@ The service is reachable at:
 This service is maintained by the {productname} team
 This service only logs to **systemd journal**.
 
-**Billing services** must be running or the spacewalk will refuse to start.
+**Billing services** must be running or **spacewalk** will refuse to start.
 
 csp-billing-adapter-service::
 This service reports the billing data to the cloud provider (AWS, AZURE, GCP).
