--- a/modules/specialized-guides/pages/public-cloud-guide/payg-support.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg-support.adoc
@@ -102,7 +102,7 @@ Continuous Compliance checks::
 
 * Is the **csp-billing-adapter.service** running?
 
-* What is the status of the **csp-billing-aadapter** located in `/var/lib/csp-billing-adapter/csp-config.json`.
+* What is the status of the **csp-billing-aadapter** located in `/var/lib/csp-billing-adapter/csp-config.json`?
 
 The following files and packages are checked for tampering::
 * Billing-data-service
