--- a/modules/specialized-guides/pages/public-cloud-guide/payg-support.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg-support.adoc
@@ -96,13 +96,13 @@ If one of the previous billing services is not running and cannot be installed o
 Check `journalctl -u mgr-check-payg.service` for additional issues.
 
 Continuous Compliance checks::
-* The **payg-dimension-computation** taskomatic task must be active.
+. The **payg-dimension-computation** taskomatic task must be active.
 
-* Is the billing server running at http://localhost:18888/?
+. Is the billing server running at http://localhost:18888/?
 
-* Is the **csp-billing-adapter.service** running?
+. Is the **csp-billing-adapter.service** running?
 
-* What is the status of the **csp-billing-aadapter** located in `/var/lib/csp-billing-adapter/csp-config.json`?
+. What is the status of the **csp-billing-aadapter** located in `/var/lib/csp-billing-adapter/csp-config.json`?
 
 The following files and packages are checked for tampering::
 * Billing-data-service
