--- a/modules/specialized-guides/nav-specialized-guides-guide.adoc
+++ b/modules/specialized-guides/nav-specialized-guides-guide.adoc
@@ -10,11 +10,11 @@ endif::[]
 * xref:specialized-guides-overview.adoc[Specialized Guides]
 ** xref:public-cloud-guide/overview.adoc[Public Cloud Guide]
 *** xref:public-cloud-guide/byos/byos-overview.adoc[BYOS Guide]
+*** xref:public-cloud-guide/payg-support.adoc[Public Cloud Support]
 **** xref:public-cloud-guide/byos/setup.adoc[Initial Setup]
 **** xref:public-cloud-guide/byos/clients.adoc[Client Configuration]
 *** {payg} Guide
 **** xref:public-cloud-guide/payg/payg-overview.adoc[{payg} Overview]
-**** xref:public-cloud-guide/payg/payg-benefits.adoc[Benefits of {payg}]
 **** {payg} on AWS
 ***** xref:public-cloud-guide/payg/payg-aws-requirements.adoc[AWS requirements]
 ***** xref:public-cloud-guide/payg/payg-public-cloud-images.adoc[1. Public Cloud Images]
@@ -22,7 +22,6 @@ endif::[]
 ***** xref:public-cloud-guide/payg/payg-server-setup.adoc[3. Server Setup]
 ***** xref:public-cloud-guide/payg/payg-webui-configuration.adoc[4. WebUI Configuration]
 ***** xref:public-cloud-guide/payg/payg-bootstrapping-process.adoc[5. Connecting Clients]
-*** xref:public-cloud-guide/payg-support.adoc[A. Public Cloud Support]
 ** xref:salt/salt-overview.adoc[Salt Guide]
 *** xref:salt/salt-terminology.adoc[Terminology]
 *** xref:salt/salt-command.adoc[Salt Command]
