--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-overview.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-overview.adoc
@@ -6,6 +6,22 @@
 
 {productname} {payg} or {payglongform} is a flexible and cost-effective solution that allows users to manage and monitor their systems from many cloud services. Unlike traditional subscription models, {payg} does not require a long-term subscription through the SUSE Customer Center. Users can leverage images of {productname} on a {payglongform} basis, paying only for the time of use, and the number of **managed** and **monitored** systems. {payg} with {productname} is an optimal solution for those seeking control, convenience, and cost savings when managing and monitoring their infrastructure on AWS, Azure, and GCP.
 
+== Benefits for using {payg}
+
+The SUSE Manager {payg} instance offers a flexible solution tailored to the modern business landscape. Key benefits include:
+
+* *Cost Efficiency:* Pay only for what you use, aligning costs with actual system management needs.
+
+* *No Subscription Required:* Eliminate the need for ongoing commitments or long-term subscriptions, allowing for greater budget flexibility.
+
+* *Ease of Use:* Utilize SUSE Manager's powerful features on a {payg} or {payglongform} basis, streamlining initial setup and ongoing systems management.
+
+* *Scalability:* Effortlessly scale the number of systems managed according to your requirements, without worrying about subscription limitations.
+
+* *Rapid Deployment:* Quickly run the image of your choice and begin managing your systems, enhancing responsiveness to business needs.
+
+* *Integration with Cloud Services:* Seamlessly leverage SUSE Manager {payg} on {aws}, Azure, or GCP taking advantage of cloud infrastructure for an agile systems management experience.
+
 
 
 
