--- a/modules/specialized-guides/pages/public-cloud-guide/payg-support.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg-support.adoc
@@ -111,3 +111,13 @@ The following files and packages are checked for tampering::
 * Python3-csp-billing-adapter-local
 * Python3-csp-billing-adapter-amazon
 * python3-csp-billing-adapter-azure
+
+Failed Checks::
+Failed checks are logged in:
+
+* `/var/log/rhn/rhn_web_ui.log`
+* `/var/log/hrn/rhn_taskomatic_daemon.log`
+
+Consequences::
+. No more actions will be executed
+. **Reposync** will stop syncing channels
