update section data

--- a/modules/specialized-guides/pages/public-cloud-guide/payg-support.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg-support.adoc
@@ -67,7 +67,9 @@ To open a new cloud support case proceed to: https://scc.suse.com/cloudsupport
 
 == Billing Services and Troubleshooting
 
+
 === billing-data-service
+
 Serves billing data from {productname} for the **CSP-billing-adapter**
 The service is reachable at: 
 
@@ -79,13 +81,25 @@ This service only logs to **systemd journal**.
 
 **Billing services** must be running or **spacewalk** will refuse to start.
 
+
+
 === csp-billing-adapter-service
+
 This service reports the billing data to the cloud provider (AWS, AZURE, GCP).
-These logs are stored in `/var/log/csp_billing_aadapter.log`.
-Additional status information can be located in `/var/lib/csp-billing-adapter/csp-config.json`
+These logs are stored in:
+
+*  `/var/log/csp_billing_aadapter.log`
+
+Additional status information can be located in:
+
+*  `/var/lib/csp-billing-adapter/csp-config.json`
+
 This service is maintained by public cloud team.
 
+
+
 === mgr-check-payg.service
+
 This service checks if **billing-data-service** is installed and running.
 It also checks if the **csp-billing-adapter-service** is installed and running.
 If these services are not running or installed it will attempt to install and start the service.
