update title case

--- a/modules/specialized-guides/pages/public-cloud-guide/payg-support.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg-support.adoc
@@ -1,7 +1,7 @@
 = Public cloud support
 :toc:
 
-== BYOS and PAYG Support
+== BYOS and PAYG support
 
 Regardless of the public cloud service you use or the plan you choose, SUSE has you covered with support. Where you get support is dependent on whether you **bring your own subscription** (BYOS) or you use SUSE products **on-demand** (PAYG). 
 
@@ -65,7 +65,7 @@ To open a new cloud support case proceed to: https://scc.suse.com/cloudsupport
 
 
 
-== Billing Services and Troubleshooting
+== Billing services and troubleshooting
 
 
 === billing-data-service
