--- a/modules/specialized-guides/pages/public-cloud-guide/payg-support.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg-support.adoc
@@ -37,10 +37,16 @@ The following procedure shows how to create a Supportconfig archive, but without
 .Options:
 ----
 -E MAIL, -N NAME, -O COMPANY, -P PHONE
-Sets your contact data: e-mail address (-E), company name (-O), your name (-N), and your phone number (-P).
+
+Sets your contact data: e-mail address (-E)
+Company name (-O)
+Your name (-N)
+Your phone number (-P)
 
 -i KEYWORDS, -F
-Limits the features to check. The placeholder KEYWORDS is a comma-separated list of case-sensitive keywords. Get a list of all keywords with supportconfig -F.
+Limits the features to check. 
+The placeholder KEYWORDS is a comma-separated list of case-sensitive keywords. 
+Get a list of all keywords with supportconfig -F.
 ----
 
 . Wait for the tool to complete the operation.
