--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-overview.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-overview.adoc
@@ -12,15 +12,15 @@ The SUSE Manager {payg} instance offers a flexible solution tailored to the mode
 
 * *Cost Efficiency:* Pay only for what you use, aligning costs with actual system management needs.
 
-* *No Subscription Required:* Eliminate the need for ongoing commitments or long-term subscriptions, allowing for greater budget flexibility.
+* *No Subscription Required:* Eliminate the need for ongoing commitments or long-term subscriptions, allowing for budget flexibility.
 
-* *Ease of Use:* Utilize SUSE Manager's powerful features on a {payg} or {payglongform} basis, streamlining initial setup and ongoing systems management.
+* *Ease of Use:* Utilize SUSE Manager's powerful features on a **{payg}** or **{payglongform}** basis, streamlining initial setup and ongoing systems management.
 
-* *Scalability:* Effortlessly scale the number of systems managed according to your requirements, without worrying about subscription limitations.
+* *Scalability:* Easily scale the number of systems managed according to your requirements, without worrying about subscription limitations.
 
-* *Rapid Deployment:* Quickly run the image of your choice and begin managing your systems, enhancing responsiveness to business needs.
+* *Rapid Deployment:* Quickly run the image of your choice and begin managing your systems, enhancing responsiveness to your needs.
 
-* *Integration with Cloud Services:* Seamlessly leverage SUSE Manager {payg} on {aws}, Azure, or GCP taking advantage of cloud infrastructure for an agile systems management experience.
+* *Integration with Cloud Services:* Leverage SUSE Manager {payg} on {aws}, Azure, or GCP taking advantage of cloud infrastructure for an agile systems management experience.
 
 
 
