--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-aws-requirements.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-aws-requirements.adoc
@@ -20,7 +20,7 @@ When setting up a SUSE Manager {payg} instance on AWS, it's essential to conside
 | 4 cores; Utilize the latest **m6a** or **m6i** systems, or opt for the older generation **m5a** or **m5i** machines
 
 | Memory
-| 16 GB
+| 32 GB (minimum 16 GB)
 
 | Network Configuration
 | Typically configured by your organization
