cleanup of Delete channels section
Avoid single sentense paras.
Remove superfluous step (see https://github.com/SUSE/spacewalk/issues/19979
and https://github.com/uyuni-project/uyuni-docs/issues/1913).
Remove superfluous sectioning; the more info sentense belongs to the Delete
channels section.

--- a/modules/administration/pages/channel-management.adoc
+++ b/modules/administration/pages/channel-management.adoc
@@ -42,7 +42,6 @@ You can implement restrictions on the channel using the {webui}.
 == Delete Channels
 
 You can delete vendor software channels from the command prompt.
-
 For information about deleting custom channels, see xref:administration:custom-channels.adoc[].
 
 
@@ -58,14 +57,6 @@ mgr-sync list channels
 ----
 spacewalk-remove-channel -c <channel-name>
 ----
-. Synchronize to remove the channel:
-+
-----
-mgr-sync sync channel <channel-name>
-----
 
-
-== Related topics
-
-* For more information about deleting channels manually, see xref:common-workflows:workflow-removing-channel.adoc[].
+For more information about deleting channels manually, see xref:common-workflows:workflow-removing-channel.adoc[].
 
