--- a/modules/specialized-guides/nav-specialized-guides-guide.adoc
+++ b/modules/specialized-guides/nav-specialized-guides-guide.adoc
@@ -20,7 +20,7 @@ endif::[]
 ***** xref:public-cloud-guide/payg/payg-configure-the-image.adoc[2. Configuration and Startup]
 ***** xref:public-cloud-guide/payg/payg-server-setup.adoc[3. Server Setup]
 ***** xref:public-cloud-guide/payg/payg-webui-configuration.adoc[4. WebUI Configuration]
-***** xref:public-cloud-guide/payg/payg-bootstrapping-process.adoc[5. Connecting Clients]
+***** xref:public-cloud-guide/payg/payg-connections-and-bootstrapping.adoc[5. Connecting Clients and Bootstrapping]
 *** xref:public-cloud-guide/payg-support.adoc[Public Cloud Support]
 ** xref:salt/salt-overview.adoc[Salt Guide]
 *** xref:salt/salt-terminology.adoc[Terminology]
