--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-configure-the-image.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-configure-the-image.adoc
@@ -13,12 +13,12 @@ For detailed information on IAM roles, see:  link:https://docs.aws.amazon.com/IA
 
 .Procedure: Configuring your {productname} instance
 
-. Select the AMI image and provide a meaningful name for your server.
+. Select the AMI image and provide a meaningful **name** for your server.
   Review the details and pricing information provided. 
 
-. You have the option to configure additional instance details in subsequent steps, such as storage, tags, security groups, and the required IAM role.
+. You have the option to configure additional instance details in subsequent steps, such as storage, tags, security groups, and the required **IAM role**.
 
-.. The image automatically suggests a default CPU configuration.
+.. The image automatically suggests a **default CPU configuration**.
 
 .. Choose an existing key pair or create a new one to grant access to the instance.
 
@@ -26,13 +26,13 @@ For detailed information on IAM roles, see:  link:https://docs.aws.amazon.com/IA
 
 .. If an IAM role has been previously created, you can attach it by selecting it from the Existing menu:IAM role[] dropdown. Otherwise, attach this role after the instance has been launched.
 
-.. Provide at least 200 GB of storage for the root partition of the server. It is recommended to add two additional partitions; One 500 GB partition for storage and one additional 80 GB partition for the database. For more information see: xref:public-cloud-guide/payg/payg-aws-requirements.adoc[AWS requirements]
+.. Provide at least **200 GB** of storage for the root partition of the server. It is recommended to add two additional partitions; One **500 GB** partition for storage and one additional **80 GB** partition for the database. For more information see: xref:public-cloud-guide/payg/payg-aws-requirements.adoc[AWS requirements]
 
 .. Follow the prompts from AWS to complete the configuration as needed.
 
-. After reviewing your configuration click the btn:Launch instance[] dropdown.
+. After reviewing your configuration click the btn:[Launch instance] dropdown.
 
-. Click on the btn:Launch Instances[] button.
+. Click on the btn:[Launch Instances] button.
 
 . You will be redirected to the **EC2** Dashboard.
 
