--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-overview.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-overview.adoc
@@ -4,7 +4,7 @@
 
 == Introduction to {payg}
 
-{productname} {payg} or {payglongform} is a flexible and cost-effective solution that allows users to manage and monitor their systems from many cloud services. Unlike traditional subscription models, {payg} does not require a long-term subscription through the SUSE Customer Center. Users can leverage images of {productname} on a {payglongform} basis, paying only for the time of use, and the number of **managed** and **monitored** systems. {payg} with {productname} is an optimal solution for those seeking control, convenience, and cost savings when managing and monitoring their infrastructure on AWS, Azure, and GCP.
+{productname} {payg} or {payglongform} is a flexible and cost-effective solution that allows users to manage and monitor their systems from several cloud services. Unlike traditional subscription models, {payg} does not require a long-term subscription through the SUSE Customer Center. Users can leverage images of {productname} on a {payglongform} basis, paying only for the time of use, and the number of **managed** and **monitored** systems. {payg} with {productname} is an optimal solution for those seeking control, convenience, and cost savings when managing and monitoring their infrastructure on AWS, Azure, and GCP.
 
 == Benefits for using {payg}
 
