--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-public-cloud-images.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-public-cloud-images.adoc
@@ -16,7 +16,7 @@ See: link:https://pint.suse.com/[pint.suse.com]
 
 . From the menu select menu:EC2[] under the **Compute** section.
 
-. In the EC2 dashboard, in the main content section, you'll find the btn:Launch Instance[] button. Click it.
+. In the EC2 dashboard, in the main content section, you'll find the btn:[Launch Instance] button. Click it.
 
 . From the **Choose an Amazon Machine Image (AMI)** page. 
 Select **Browse more AMIs**
@@ -28,6 +28,6 @@ Select **Browse more AMIs**
 * **SUSE Manager Server Family (EU and UK only)**
 * **SUSE Manager Server Family (non-EU and non-UK-only)**.
 
-. Click btn:Select[].
+. Click btn:[Select].
 
 . Proceed for image configuration.
