--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-configure-the-image.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-configure-the-image.adoc
@@ -26,7 +26,15 @@ For detailed information on IAM roles, see:  link:https://docs.aws.amazon.com/IA
 
 .. If an IAM role has been previously created, you can attach it by selecting it from the Existing menu:IAM role[] dropdown. Otherwise, attach this role after the instance has been launched.
 
-.. Provide at least **200 GB** of storage for the root partition of the server. It is recommended to add two additional partitions; One **500 GB** partition for storage and one additional **80 GB** partition for the database. For more information see: xref:public-cloud-guide/payg/payg-aws-requirements.adoc[AWS requirements]
+.. Create the following partitions
+
+* **200 GB** for the root partition
+ 
+* **500 GB** for spacewalk storage
+ 
+* **80 GB** for the database. 
++
+For more information see: xref:public-cloud-guide/payg/payg-aws-requirements.adoc[AWS requirements]
 
 .. Follow the prompts from AWS to complete the configuration as needed.
 
