update titles and client registration content

--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-configure-the-image.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-configure-the-image.adoc
@@ -2,9 +2,10 @@
 
 This section covers initial preparation and configuration of the image on {aws}.
 
+.The IAM role
 [IMPORTANT]
 ====
-To ensure seamless operation, proper AWS permissions for the IAM role are essential. This role must be attached after the instance is launched; attaching it beforehand will result in a disconnection of {productname} after just one hour. You can pre-create the role and then select it from the existing IAM role dropdown during the instance configuration process.
+To ensure seamless operation, proper AWS permissions for the IAM role are essential. This role must be attached after the instance is launched; attaching it beforehand will result in a disconnection of {productname} after one hour. You can pre-create the role and then select it from the existing btn:[IAM role] dropdown during the instance configuration process.
 
 A role can be assigned to a running instance through the following steps: menu:Actions[Security > Modify IAM-role].
 
@@ -44,11 +45,11 @@ For more information see: xref:public-cloud-guide/payg/payg-aws-requirements.ado
 
 . You will be redirected to the **EC2** Dashboard.
 
-. Verify that the instance has successfully launched by selecting menu:Instances[] on the left sidebar. Your SUSE Manager {payg} instance should be running in the main content area.
+. Verify that the instance has successfully launched by selecting menu:Instances[] on the left sidebar. The {productname} {payg} instance should be running in the main content area.
 
 [NOTE] 
 .Usage and Costs
 ====
-Keep in mind that since this is a {payg} image, you will be billed according to your actual usage, including the number of systems you manage and monitor with this instance. It's essential to regularly track and review your usage to prevent any unexpected costs and ensure alignment with your budgeting needs.
+Keep in mind that since this is a {payg} image, you will be billed according to your actual usage, including the number of systems you **manage** and **monitor** with this instance. It's essential to regularly track and review your usage to prevent unexpected costs and ensure alignment with your needs.
 ====
 
