--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-connections-and-bootstrapping.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-connections-and-bootstrapping.adoc
@@ -1,17 +1,17 @@
-= {payg} Client connections and bootstrapping
+= {payg} Client connections and Client Registration
 
-== Managing and bootstrapping PAYG and BYOS images
+== Managing connections and registering PAYG and BYOS images
 
 PAYG (Pay-As-You-Go) Images::
-Connecting and bootstrapping PAYG images is supported and can be done without additional prerequisites.
+Connecting and registering PAYG images is supported and can be done without additional prerequisites.
 
 
 BYOS (Bring Your Own Subscription) Images::
-Bootstrapping BYOS images requires SCC (SUSE Customer Center) credentials beforehand. If a user attempts to onboard a BYOS image without providing SCC credentials, the operation will fail, as these credentials are required to verify your subscription.
+Registering BYOS images requires SCC (SUSE Customer Center) credentials beforehand. If a user attempts to onboard a BYOS image without providing SCC credentials, the operation will fail, as these credentials are required to verify your subscription.
 
 [IMPORTANT]
 ====
-* Always verify the type of image (PAYG or BYOS) prior to initiating the bootstrapping process with {productname} to ensure a smooth and error-free connection.
+* Always verify the type of image (PAYG or BYOS) prior to initiating the registration process with {productname} to ensure a smooth and error-free connection.
 
 * If you have SCC credentials ensure your SCC credentials are valid and have the necessary permissions for utilizing BYOS images.
 
@@ -21,7 +21,7 @@ Only BYOS instances should be registered against the SUSE Customer Center.
 **Registering PAYG instances with the SUSE Customer Center or your own RMT server will create conflicts that are not easily solved**.  PAYG instances are automatically registered against the correct update server when added to your cloud service provider {productname} instance.
 ====
 
-== Adding additional {payg} SUSE products as clients
+== Starting up additional {payg} {suse} products in {aws}
 
 .Procedure: Deploying {payg} SUSE Linux Enterprise instances in AWS
 
@@ -34,9 +34,20 @@ Only BYOS instances should be registered against the SUSE Customer Center.
 For more information on using {suse} products in the public cloud see: link:https://documentation.suse.com/sle-public-cloud/all/html/public-cloud/cha-intro.html[SUSE Linux Enterprise Public Cloud Guide]
 
 
-== Connecting {payg} {sle} instances to {payg} instances of {productname}
+== Establishing a {payg} {sle} connection with {productname} {payg}
 
-.Procedure: Connecting {payg} {sle} instances to {payg} instances of {productname}
+[IMPORTANT]
+====
+It is important to recognize that there is a difference between **{payglongform} connections** and **bootstrapping**. Bootstrapping is also known as **client registration**.
+
+Once you have started up your {productname} {payg} instance and refreshed products you can add **{payglongform} connections** via the menu:Admin[Setup Wizard > Pay-as-you-go] btn:[+Add Pay-as-you-go] button. This action links your {productname} {payg} instance with additional {payg} products on {aws}. 
+
+**Bootstrapping** or **client registration** is the process of onboarding clients in {productname}. The registration process installs the appropriate client tools and provides full management functionality.
+
+To manage your clients, start by **establishing connections** and then proceed to **bootstrap** your clients. These two actions are the steps required for initiating and completing the client onboarding process.
+====
+
+.Procedure: Connecting {sle} {payg} instances to {productname} {payg}
 
 . Return to the SUSE Manager Server WebUI.
 
@@ -45,15 +56,21 @@ For more information on using {suse} products in the public cloud see: link:http
 . Add a description.
 
 . Complete the instance SSH connection data:
-  * Host: `URL of the machine`
+  * Host: `CSP URL of the machine`
   * SSH Port: `22`
-  * User: `<user>`
+  * User: `root`
   * Password: `<password>`
   * SSH Private Key
 
 . Click btn:[Create] and wait for the sync to finish.
 
 . Proceed to menu:Admin[Setup Wizard > Products] to access your {payg} SUSE Linux Enterprise products.
+
+== Registering Clients
+
+Now that you have established connections to the {productname} {payg} instance you can register them as clients. To learn how to register various clients see: xref:client-configuration:registration-methods.adoc[Client Registration Methods]
+
+
 
 
 
