Corrected Uyuni version in DB migration instructions.

--- a/modules/installation-and-upgrade/pages/db-migration-xy.adoc
+++ b/modules/installation-and-upgrade/pages/db-migration-xy.adoc
@@ -15,6 +15,7 @@ endif::[]
 
 ifeval::[{uyuni-content} == true]
 
+* If you are running {opensuse} Leap 15.3, use PostgreSQL 13.
 * If you are running {opensuse} Leap 15.4, use PostgreSQL 14.
 * If you are running {opensuse} Leap 15.5, use PostgreSQL 14.
 
