--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-connections-and-bootstrapping.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-connections-and-bootstrapping.adoc
@@ -21,17 +21,11 @@ Only BYOS instances should be registered against the SUSE Customer Center.
 **Registering PAYG instances with the SUSE Customer Center or your own RMT server will create conflicts that are not easily solved**.  PAYG instances are automatically registered against the correct update server when added to your cloud service provider {productname} instance.
 ====
 
+
+
 == Starting up additional {payg} {suse} products in {aws}
 
-.Procedure: Deploying {payg} SUSE Linux Enterprise instances in AWS
-
-. Search for the {sle} {payg} instance on AWS.
-
-. Configure the instance as needed.
-
-. Start the instance.
-
-For more information on using {suse} products in the public cloud see: link:https://documentation.suse.com/sle-public-cloud/all/html/public-cloud/cha-intro.html[SUSE Linux Enterprise Public Cloud Guide]
+For more information on using {suse} {payg} products such as {sle} in the public cloud see: link:https://documentation.suse.com/sle-public-cloud/all/html/public-cloud/cha-intro.html[SUSE Linux Enterprise Public Cloud Guide]
 
 
 == Establishing a {payg} {sle} connection with {productname} {payg}
