Corrected client tools channel name.

--- a/modules/client-configuration/pages/clients-slemicro.adoc
+++ b/modules/client-configuration/pages/clients-slemicro.adoc
@@ -161,13 +161,13 @@ To add the client tools, add these channels from the command prompt:
 | sle-micro-5.4-uyuni-client
 
 | {micro} 5.3
-| suse-microos-5.3-uyuni-client
+| suse-micro-5.3-uyuni-client
 
 | {micro} 5.2
 | suse-microos-5.2-uyuni-client
 
 | {micro} 5.1
-| sle-micro-5.1-uyuni-client
+| sle-microos-5.1-uyuni-client
 
 |===
 
