--- a/modules/specialized-guides/pages/public-cloud-guide/payg-support.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg-support.adoc
@@ -55,20 +55,7 @@ Get a list of all keywords with supportconfig -F.
 
 == Opening a new support case
 
-To open a new cloud support case proceed to: https://scc.suse.com/cloudsupport
-
-.Procedure: Opening a new support case
-
-. Generate and upload your instances **supportconfig** file.
-
-. Upload your **supportconfig** file maximum of **5 GB** at link:https://scc.suse.com/cloudsupport[Cloud Support]
-
-. Accept the **terms and conditions**, **Terms of Use and Import/Export Policy** and the **privacy policy**.
-
-. Select the btn:Upload and Validate[] button.
-
-. Once validated complete the __personal information__ and __organization information__ documents and open the **support case**.
-
+To open a new support case for your cloud pay-as-you-go instance, you need to generate a supportconfig file and then follow the steps listed on https://scc.suse.com/cloudsupport
 
 
 == Billing services and troubleshooting
