--- a/modules/specialized-guides/pages/public-cloud-guide/payg-support.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg-support.adoc
@@ -55,7 +55,9 @@ Get a list of all keywords with supportconfig -F.
 
 == Opening a new support case
 
-To open a new support case for your cloud pay-as-you-go instance, you need to generate a supportconfig file and then follow the steps listed on https://scc.suse.com/cloudsupport
+To open a new support case for your cloud pay-as-you-go instance, you need to generate a **supportconfig** file and then follow the steps listed on:
+
+link:https://scc.suse.com/cloudsupport[SUSE Customer Center Cloudsupport]
 
 
 == Billing services and troubleshooting
