fix literal block

--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-server-setup.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-server-setup.adoc
@@ -25,8 +25,13 @@ You will see a list of partitions that were created when we configured the AWS i
 ** Spacewalk storage 500 GB 
 ** Database storage 80 GB
 
-. Format the command in the following manner: `suma-storage <storage-disk-device> [<database-disk-device>]`
+. Format the command in the following manner: 
 +
+----
+suma-storage <storage-disk-device> [<database-disk-device>]
+----
++
+
 For example: `suma-storage /dev/nvme1n1 /dev/nvme2n1`
 
 [NOTE]
