updated server setup sectiion

--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-server-setup.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-server-setup.adoc
@@ -27,12 +27,15 @@ You will see a list of partitions that were created when we configured the AWS i
 
 . Format the command in the following manner: 
 +
+
 ----
 suma-storage <storage-disk-device> [<database-disk-device>]
+
+#For example: 
+
+suma-storage /dev/nvme1n1 /dev/nvme2n1
 ----
 +
-
-For example: `suma-storage /dev/nvme1n1 /dev/nvme2n1`
 
 [NOTE]
 ====
@@ -54,7 +57,6 @@ This command will create the following storage locations:
 /var/lib/spacewalk
 ```
 ====
-
 
 .Run setup
 
