--- a/modules/installation-and-upgrade/pages/install-vm.adoc
+++ b/modules/installation-and-upgrade/pages/install-vm.adoc
@@ -21,7 +21,7 @@ These are suitable for a quick test installation, such as a server with one clie
 If you want to use a production environment, review the requirements listed in xref:hardware-requirements.adoc[].
 ====
 
-In the following table replace {sles-version}-{sp-base} with the actual product version string.
+In the following table replace {sles-version} {sp-base} with the actual product version string.
 Find the {minimalsles} image at https://download.suse.com/.
 
 [cols="1,1", options="header"]
