--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-webui-configuration.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-webui-configuration.adoc
@@ -31,7 +31,8 @@ The username is **admin** the password will be the **Instance ID** on AWS EC2.
 
 [NOTE]
 ====
-On a fresh server, the organization credentials table listed at menu:Admin[Setup Wizard > Organization Credentials] and the Products table listed under menu:Admin[Setup Wizard > Products] will be empty.
+On a new server, the organization credentials table is listed at menu:Admin[Setup Wizard > Organization Credentials].
+The Products table listed under menu:Admin[Setup Wizard > Products] will be empty.
 ====
 
 .Procedure: Verify credentials for {payg} and refreshing the product list
