--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-webui-configuration.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-webui-configuration.adoc
@@ -49,7 +49,7 @@ The Products table listed under menu:Admin[Setup Wizard > Products] will be empt
 [IMPORTANT]
 ====
 .Ubuntu and Debian
-Ubuntu and Debian are not currently supported by our RMT servers; however, we have plans to introduce support for these platforms on cloud based services in the near future.
+Ubuntu and Debian are not currently supported by our RMT servers.
 
 .Red Hat Linux Enterprise Clients
 SUSE Manager offers support for Red Hat Linux Enterprise Clients, but it's important to note that content still needs to be added manually and isn't available through the cloud-based RMT service.
