--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-webui-configuration.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-webui-configuration.adoc
@@ -52,7 +52,7 @@ The Products table listed under menu:Admin[Setup Wizard > Products] will be empt
 Ubuntu and Debian are not currently supported by our RMT servers.
 
 .Red Hat Linux Enterprise Clients
-SUSE Manager offers support for Red Hat Linux Enterprise Clients, but it's important to note that content still needs to be added manually and isn't available through the cloud-based RMT service.
+{productname} offers support for {rhel} clients; however it is important to note that content still needs to be added manually and is not available through the cloud-based RMT service.
 
 See: xref:client-configuration:registration-overview-redhat.adoc[Red Hat Client Registration]
 ====
